--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
+mock~=4.0.3
+freezegun~=1.1.0
 keboola.component==1.1.0
-keboola.utils
-keboola.http-client
-mock
-freezegun
+dateparser~=1.0.0
+requests~=2.25.1
+httplib2~=0.19.1
+retry~=0.9.2
+google-api-python-client~=2.9.0
