--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 mock~=4.0.3
 freezegun~=1.1.0
-dateparser~=1.0.0
+dateparser==1.1.8
 retry~=0.9.2
 google-api-python-client~=2.31.0
 keboola.component==1.1.0
