--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,5 @@ mock~=4.0.3
 freezegun~=1.1.0
 dateparser==1.1.8
 retry~=0.9.2
-google-api-python-client~=2.31.0
+google-api-python-client==2.107.0
 keboola.component==1.1.0
